Workshop HoGent/force-app/main/default/objects/Sale_Item__c/Sale_Item__c.object-meta.xml
<CustomObject>
    <label>Sale Item</label>
    <nameField>
        <label>Sale Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sale Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>