Workshop HoGent/force-app/main/default/objects/Sale_Item__c/fields/Hardware__c.field-meta.xml
<CustomField>
    <fullName>Hardware__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hardware</label>
    <referenceTo>Hardware__c</referenceTo>
    <relationshipLabel>Sale Items</relationshipLabel>
    <relationshipName>Sale_Items</relationshipName>
    <type>Lookup</type>
</CustomField>