Workshop HoGent/force-app/main/default/objects/Sale_Item__c/fields/Paper__c.field-meta.xml
<CustomField>
    <fullName>Paper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paper</label>
    <referenceTo>Paper__c</referenceTo>
    <relationshipLabel>Sale Items</relationshipLabel>
    <relationshipName>Sale_Items</relationshipName>
    <type>Lookup</type>
</CustomField>