Workshop HoGent/force-app/main/default/objects/Sale_Item__c/fields/Price_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Unit__c</fullName>
    <label>Price Per Unit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>