Workshop HoGent/force-app/main/default/objects/Sale_Item__c/fields/Sale__c.field-meta.xml
<CustomField>
    <fullName>Sale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sale</label>
    <referenceTo>Sales__c</referenceTo>
    <relationshipLabel>Sale Items</relationshipLabel>
    <relationshipName>Sale_Items</relationshipName>
    <type>Lookup</type>
</CustomField>