Workshop HoGent/force-app/main/default/objects/Sale_Item__c/validationRules/EnoughInStock.validationRule-meta.xml
<ValidationRule>
    <fullName>EnoughInStock</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
  NOT(ISBLANK(Hardware__c)), 
  Hardware__r.Stock__c &lt; Quantity__c, 
  Paper__r.Stock__c &lt; Quantity__c
)</errorConditionFormula>
    <errorMessage>There is not enough stock to enter this order. Please check the quantity.</errorMessage>
</ValidationRule>